syntax = "proto3";
package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  bool successful = 0;
  repeated string error = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool successful = 0;
  repeated string error = 2;
  string token = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool successful = 0;
  repeated string error = 2;
  string id = 3;
}